fix header-facts gap

--- a/styles/components/article-header.css
+++ b/styles/components/article-header.css
@@ -15,7 +15,7 @@
     .header-text-aside {
         gap: 24px;
     }
-    
+
     p {
         font-size: clamp(1.125rem, calc((100vw - 50rem) * (2 - 1.125) / 40) + 1.125rem, 2rem);
     }
@@ -61,7 +61,7 @@
 .header-facts {
     width: 100%;
     display: flex;
-    gap: clamp(16px, calc((100vw - 400px) * 16 / 1000 + 16), 32px);
+    gap: clamp(16px, calc((100vw - 400px) * 16 / 1000 + 16px), 32px);
     flex-wrap: wrap;
 
     div {
